--- a/platformio.ini
+++ b/platformio.ini
@@ -22,8 +22,14 @@ lib_deps =
      # RECOMMENDED
      # Accept new functionality in a backwards compatible manner and patches
      sui77/rc-switch @ ^2.6.4
+     https://github.com/256dpi/arduino-mqtt.git
 
-upload_port = /dev/ttyUSB1
+     WifiManager
+     ArduinoJson
+
+
+; upload_port = /dev/ttyUSB1
+upload_port = 192.168.1.130
 upload_speed = 460800
 
 ; Serial Monitor options
