--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,8 @@ src_dir=.
 platform = espressif8266
 board = d1_mini_lite
 framework = arduino
-
+;board_build.filesystem = littlefs
+board_build.ldscript = eagle.flash.4m.ld
 
 lib_deps =
 
@@ -25,7 +26,7 @@ lib_deps =
      https://github.com/256dpi/arduino-mqtt.git
 
      WifiManager
-     ArduinoJson
+     bblanchon/ArduinoJson @ ~6.18.1
 
 
 ;upload_port = /dev/ttyUSB1
