default flash mem settings

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ platform = espressif8266
 board = d1_mini_lite
 framework = arduino
 ;board_build.filesystem = littlefs
-board_build.ldscript = eagle.flash.4m.ld
+;board_build.ldscript = eagle.flash.4m1m.ld
 
 lib_deps =
 
