reduce memory usage and LittleFS again

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ src_dir=.
 platform = espressif8266
 board = d1_mini_lite
 framework = arduino
-;board_build.filesystem = littlefs
+board_build.filesystem = littlefs
 ;board_build.ldscript = eagle.flash.4m1m.ld
 
 lib_deps =
